feat: añadir logica de anuncios y verificaciones